# alpharad

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.c
.github/: contributing.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml
qa/: animate.sh  call_ent.sh  cca.py  coords-to-scatter.py  coords_to_scatter.py  modes_comparison_charts.py  modes_proto.py  plot-coordinates.py  plot-data.py  plot-xy.py  plot2-py  plot_data.py  points.txt  render-saved.sh  render_saved.sh  requirements.txt  set_camera_params.sh
qa/data/analysis/2020-11-25/: entropy.csv  uniformity.csv
qa/data/analysis/2020-11-26/: README  entropy.csv  uniformity.csv
qa/data/analysis/2020-12-04/: entropy.csv  uniformity.csv
qa/data/observations/2020-09-30/: README
qa/data/observations/2020-11-18/: README
qa/data/observations/2020-11-24/: README
src/: CMakeLists.txt  alpharad.c  alpharad.h  data_extractors.c  data_extractors.h  dto.h  frame_cca.c  frame_cca.h  frame_processors.c  frame_processors.h  logger.c  logger.h  settings.c  settings.h  v4l2_util.c  v4l2_util.h
src/tests/: CMakeLists.txt  experiment.c  test_data_extractors.c  test_data_extractors.h  test_image_processing.c  test_image_processing.h  test_logger.c  test_logger.h  test_playground.c  test_playground.h  test_settings.c  test_settings.h  tests_runner.c
