cmake_minimum_required(VERSION 3.5)
project(alpharad VERSION 0.5 LANGUAGES C)

set(CMAKE_C_STANDARD 11)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_compile_options("$<$<CONFIG:DEBUG>:-DDEBUG>")

add_compile_definitions(PROJECT_VERSION="${CMAKE_PROJECT_VERSION}")
add_subdirectory(src)